--- a/PhotoDrop/DropPreview.storyboard
+++ b/PhotoDrop/DropPreview.storyboard
@@ -6,9 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,57 +23,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FoO-eI-87W">
-                                <rect key="frame" x="16" y="20" width="32" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="back-button-black"/>
+                            <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C53-sZ-5Ka">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FoO-eI-87W" userLabel="Back Button">
+                                <rect key="frame" x="320" y="20" width="39" height="39"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" image="close-button"/>
                                 <connections>
                                     <action selector="backButtonTapped:" destination="lnm-mR-zJS" eventType="touchUpInside" id="GPh-qB-R9s"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What makes this place a hidden gem ..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ame-RJ-Myd">
-                                <rect key="frame" x="36" y="409.5" width="303" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C53-sZ-5Ka">
-                                <rect key="frame" x="16" y="60" width="343" height="333.5"/>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diamond-gold" translatesAutoresizingMaskIntoConstraints="NO" id="Ibp-tj-iS9">
-                                <rect key="frame" x="158" y="471.5" width="60" height="60"/>
+                                <rect key="frame" x="153.5" y="591" width="68" height="68"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Ibp-tj-iS9" secondAttribute="height" multiplier="1:1" id="fY8-IU-cOk"/>
-                                    <constraint firstAttribute="width" constant="60" id="r5f-0T-eYG"/>
+                                    <constraint firstAttribute="width" constant="68" id="r5f-0T-eYG"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jtw-c9-Cqg">
-                                <rect key="frame" x="171.5" y="479" width="32" height="20"/>
+                                <rect key="frame" x="165" y="600" width="45" height="25"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="32" id="enQ-pV-9oY"/>
-                                    <constraint firstAttribute="height" constant="20" id="kze-0i-a30"/>
+                                    <constraint firstAttribute="width" constant="45" id="enQ-pV-9oY"/>
+                                    <constraint firstAttribute="height" constant="25" id="kze-0i-a30"/>
                                 </constraints>
-                                <state key="normal" title="Post">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <state key="normal" title="Drop">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="postButtonTapped:" destination="lnm-mR-zJS" eventType="touchUpInside" id="KFN-tA-iAm"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What makes this place a hidden gem ..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ame-RJ-Myd">
+                                <rect key="frame" x="20" y="528.5" width="335" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
-                        <color key="backgroundColor" red="0.53609974540000005" green="1" blue="0.99327762159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ame-RJ-Myd" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leadingMargin" constant="20" id="0jo-IK-kLD"/>
-                            <constraint firstItem="ame-RJ-Myd" firstAttribute="top" secondItem="C53-sZ-5Ka" secondAttribute="bottom" constant="16" id="19b-hM-zhA"/>
-                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="height" secondItem="gZW-fA-gHm" secondAttribute="height" multiplier="1/2" id="CnT-hc-cyw"/>
-                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="top" secondItem="Ibp-tj-iS9" secondAttribute="top" multiplier="1.015" id="EIo-Di-0s4"/>
-                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leading" constant="16" id="QdE-j4-SMQ"/>
+                            <constraint firstAttribute="trailing" secondItem="C53-sZ-5Ka" secondAttribute="trailing" id="3Eh-Gr-Nnz"/>
+                            <constraint firstItem="Ibp-tj-iS9" firstAttribute="top" secondItem="ame-RJ-Myd" secondAttribute="bottom" constant="32" id="4it-ZG-MKc"/>
+                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="bottom" secondItem="Ibp-tj-iS9" secondAttribute="centerY" id="6Rd-Tk-pmi"/>
+                            <constraint firstItem="HJ6-f6-vGB" firstAttribute="top" secondItem="Ibp-tj-iS9" secondAttribute="bottom" constant="8" id="Ccp-M6-wKa"/>
+                            <constraint firstAttribute="trailing" secondItem="ame-RJ-Myd" secondAttribute="trailing" constant="20" id="NBf-Aq-JsF"/>
+                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" constant="-20" id="XcX-dJ-dQO"/>
+                            <constraint firstAttribute="trailing" secondItem="FoO-eI-87W" secondAttribute="trailing" constant="16" id="auL-So-Spr"/>
                             <constraint firstItem="Ibp-tj-iS9" firstAttribute="centerX" secondItem="gZW-fA-gHm" secondAttribute="centerX" id="gLq-Uj-YNA"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ame-RJ-Myd" secondAttribute="trailing" constant="20" id="hFG-u7-vY1"/>
-                            <constraint firstAttribute="trailing" secondItem="C53-sZ-5Ka" secondAttribute="trailing" constant="16" id="m4E-lj-h4g"/>
-                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="centerX" secondItem="Ibp-tj-iS9" secondAttribute="centerX" id="ppx-Re-Jyd"/>
-                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="top" secondItem="gZW-fA-gHm" secondAttribute="topMargin" constant="60" id="rGg-w9-DgX"/>
-                            <constraint firstItem="Ibp-tj-iS9" firstAttribute="top" secondItem="ame-RJ-Myd" secondAttribute="bottom" constant="32" id="v5w-7Y-GIM"/>
+                            <constraint firstItem="Jtw-c9-Cqg" firstAttribute="centerX" secondItem="Ibp-tj-iS9" secondAttribute="centerX" id="kul-9K-wDm"/>
+                            <constraint firstItem="HJ6-f6-vGB" firstAttribute="top" secondItem="C53-sZ-5Ka" secondAttribute="bottom" id="o9d-MZ-tQ5"/>
+                            <constraint firstItem="C53-sZ-5Ka" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leading" id="sE8-UF-9QV"/>
+                            <constraint firstItem="FoO-eI-87W" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" id="smN-3S-PL6"/>
+                            <constraint firstItem="ame-RJ-Myd" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leading" constant="20" id="zgp-bA-S1u"/>
                         </constraints>
                     </view>
                     <connections>
@@ -88,7 +90,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="back-button-black" width="32" height="32"/>
+        <image name="close-button" width="39" height="39"/>
         <image name="diamond-gold" width="38" height="32"/>
     </resources>
 </document>
