--- a/PhotoDrop/PhotoList.storyboard
+++ b/PhotoDrop/PhotoList.storyboard
@@ -26,11 +26,11 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="photoCell" rowHeight="99" id="UxL-QQ-bek">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="photoCell" rowHeight="99" id="UxL-QQ-bek" customClass="PhotoTableViewCell" customModule="PhotoDrop" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="99"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UxL-QQ-bek" id="E7C-Yw-mZu">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UxL-QQ-bek" id="E7C-Yw-mZu" customClass="PhotoTableViewCell" customModule="PhotoDrop" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="98.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="YlR-y4-aRv">
@@ -93,12 +93,18 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="Baj-hE-43Z" kind="show" id="HJj-fM-BcX"/>
+                                            <outlet property="dateLabel" destination="8Zr-k4-6Nu" id="G2b-vU-ChU"/>
+                                            <outlet property="gemImageView" destination="EyT-SR-syY" id="Unn-BQ-Evl"/>
+                                            <outlet property="pointsLabel" destination="joF-Ba-YEU" id="DJq-Cp-PvY"/>
+                                            <outlet property="titleLabel" destination="yyV-QQ-8as" id="DKQ-M2-HKZ"/>
+                                            <outlet property="usernameLabel" destination="fNx-oI-BHt" id="8KD-WF-Xz0"/>
+                                            <segue destination="Baj-hE-43Z" kind="show" identifier="toPhotoDetail" id="HJj-fM-BcX"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <sections/>
                                 <connections>
-                                    <outlet property="dataSource" destination="04f-4K-4ZS" id="O1c-Ak-lRL"/>
+                                    <outlet property="dataSource" destination="04f-4K-4ZS" id="PbJ-Fo-ugZ"/>
                                     <outlet property="delegate" destination="04f-4K-4ZS" id="dFn-E4-5QW"/>
                                 </connections>
                             </tableView>
@@ -114,7 +120,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.53609974540000005" green="1" blue="0.99327762159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="GUd-nO-AuN" firstAttribute="top" secondItem="GiH-tc-UjO" secondAttribute="bottom" id="1iV-29-LfJ"/>
                             <constraint firstItem="Bgo-F7-j2F" firstAttribute="centerX" secondItem="6q1-kV-66l" secondAttribute="centerX" id="9os-e9-VtJ"/>
