--- a/PhotoDrop/Welcome.storyboard
+++ b/PhotoDrop/Welcome.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AUJ-ur-mgk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AUJ-ur-mgk">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -41,7 +41,6 @@
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="userNameSubmitButtonTapped:" destination="AUJ-ur-mgk" eventType="touchUpInside" id="3hk-Oe-blm"/>
-                                    <segue destination="G0t-YZ-tGG" kind="show" identifier="toMapView" id="Mwu-zb-qaj"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -49,6 +48,7 @@
                     </view>
                     <connections>
                         <outlet property="userNameTextField" destination="FPB-cD-9CK" id="yiX-ee-TYg"/>
+                        <segue destination="G0t-YZ-tGG" kind="show" identifier="toMapView" id="1px-oX-sLQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZSl-R4-C8d" userLabel="First Responder" sceneMemberID="firstResponder"/>
