--- a/PhotoDrop/Photo.storyboard
+++ b/PhotoDrop/Photo.storyboard
@@ -22,29 +22,81 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HwS-Ga-GWu">
-                                <rect key="frame" x="327" y="28" width="32" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="32" id="Gp8-Tw-Taf"/>
-                                    <constraint firstAttribute="width" secondItem="HwS-Ga-GWu" secondAttribute="height" multiplier="1:1" id="mNA-Xn-fGu"/>
-                                </constraints>
-                                <state key="normal" image="close-button"/>
-                                <connections>
-                                    <action selector="backButtonTapped:" destination="ay9-6C-557" eventType="touchUpInside" id="uLe-bD-F9p"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z3o-ZK-RFi">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6AG-Mu-gT5">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qDa-Yu-J2w">
+                                <rect key="frame" x="8" y="22" width="359" height="40.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="WoP-NV-9wB">
+                                        <rect key="frame" x="0.0" y="0.0" width="317" height="40.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="OG8-wD-zxG">
+                                                <rect key="frame" x="0.0" y="0.0" width="317" height="20"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kty-kj-1zu">
+                                                        <rect key="frame" x="0.0" y="0.0" width="43" height="20"/>
+                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bo7-b8-vNw" userLabel="Report Button">
+                                                        <rect key="frame" x="297" y="0.0" width="20" height="20"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="20" id="4we-QC-7zq"/>
+                                                            <constraint firstAttribute="width" secondItem="bo7-b8-vNw" secondAttribute="height" multiplier="1:1" id="NSP-vX-0Sa"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                        <state key="normal" image="report-user"/>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fsX-Y9-BJi">
+                                                <rect key="frame" x="0.0" y="20" width="317" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HwS-Ga-GWu" userLabel="Dismiss Button">
+                                        <rect key="frame" x="327" y="4.5" width="32" height="32"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="32" id="Gp8-Tw-Taf"/>
+                                            <constraint firstAttribute="width" secondItem="HwS-Ga-GWu" secondAttribute="height" multiplier="1:1" id="mNA-Xn-fGu"/>
+                                        </constraints>
+                                        <state key="normal" image="close-button"/>
+                                        <connections>
+                                            <action selector="backButtonTapped:" destination="ay9-6C-557" eventType="touchUpInside" id="uLe-bD-F9p"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z3o-ZK-RFi" userLabel="Gem It Button ">
                                 <rect key="frame" x="307" y="567" width="52" height="53"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="diamond-inactive"/>
+                                <connections>
+                                    <action selector="gemItButtonTapped:" destination="ay9-6C-557" eventType="touchUpInside" id="Fqd-m7-kOH"/>
+                                </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.53609974540000005" green="1" blue="0.99327762159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="HwS-Ga-GWu" secondAttribute="trailing" constant="16" id="8Jr-ro-0a9"/>
-                            <constraint firstItem="HwS-Ga-GWu" firstAttribute="top" secondItem="Az5-Ja-N7q" secondAttribute="bottom" constant="8" id="h2g-tn-sui"/>
+                            <constraint firstItem="6AG-Mu-gT5" firstAttribute="top" secondItem="hEo-0Z-VWN" secondAttribute="top" id="5Su-p0-qHh"/>
+                            <constraint firstAttribute="trailing" secondItem="6AG-Mu-gT5" secondAttribute="trailing" id="7te-6L-cY6"/>
+                            <constraint firstItem="qDa-Yu-J2w" firstAttribute="top" secondItem="hEo-0Z-VWN" secondAttribute="top" constant="22" id="Uxc-da-3B4"/>
+                            <constraint firstItem="qDa-Yu-J2w" firstAttribute="leading" secondItem="hEo-0Z-VWN" secondAttribute="leading" constant="8" id="e6l-8i-Pi9"/>
+                            <constraint firstAttribute="trailing" secondItem="qDa-Yu-J2w" secondAttribute="trailing" constant="8" id="fmR-cs-iOY"/>
+                            <constraint firstAttribute="bottom" secondItem="6AG-Mu-gT5" secondAttribute="bottom" id="lGh-XD-WuP"/>
+                            <constraint firstItem="6AG-Mu-gT5" firstAttribute="leading" secondItem="hEo-0Z-VWN" secondAttribute="leading" id="xtv-sr-flJ"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="dateLabel" destination="fsX-Y9-BJi" id="AOz-Ne-Nl5"/>
+                        <outlet property="photoImageView" destination="6AG-Mu-gT5" id="cRd-Zl-aWJ"/>
+                        <outlet property="titleLabel" destination="kty-kj-1zu" id="E9F-Dr-VLA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cB9-UX-F5z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -54,5 +106,6 @@
     <resources>
         <image name="close-button" width="39" height="39"/>
         <image name="diamond-inactive" width="52" height="53"/>
+        <image name="report-user" width="21" height="21"/>
     </resources>
 </document>
