--- a/PhotoDrop/DropPreview.storyboard
+++ b/PhotoDrop/DropPreview.storyboard
@@ -8,6 +8,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,9 +24,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C53-sZ-5Ka">
+                            <imageView userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C53-sZ-5Ka">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" red="0.9272085428237915" green="0.83658683300018311" blue="0.95621949434280396" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FoO-eI-87W" userLabel="Back Button">
                                 <rect key="frame" x="320" y="20" width="39" height="39"/>
@@ -36,14 +37,14 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diamond-gold" translatesAutoresizingMaskIntoConstraints="NO" id="Ibp-tj-iS9">
-                                <rect key="frame" x="153.5" y="591" width="68" height="68"/>
+                                <rect key="frame" x="145" y="291" width="85" height="85"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Ibp-tj-iS9" secondAttribute="height" multiplier="1:1" id="fY8-IU-cOk"/>
-                                    <constraint firstAttribute="width" constant="68" id="r5f-0T-eYG"/>
+                                    <constraint firstAttribute="width" constant="85" id="r5f-0T-eYG"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jtw-c9-Cqg">
-                                <rect key="frame" x="165" y="600" width="45" height="25"/>
+                                <rect key="frame" x="165" y="308.5" width="45" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="45" id="enQ-pV-9oY"/>
                                     <constraint firstAttribute="height" constant="25" id="kze-0i-a30"/>
@@ -57,7 +58,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What makes this place a hidden gem ..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ame-RJ-Myd">
-                                <rect key="frame" x="20" y="75" width="335" height="30"/>
+                                <rect key="frame" x="20" y="218.5" width="335" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -67,16 +68,16 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="C53-sZ-5Ka" secondAttribute="trailing" id="3Eh-Gr-Nnz"/>
                             <constraint firstItem="Jtw-c9-Cqg" firstAttribute="bottom" secondItem="Ibp-tj-iS9" secondAttribute="centerY" id="6Rd-Tk-pmi"/>
-                            <constraint firstItem="HJ6-f6-vGB" firstAttribute="top" secondItem="Ibp-tj-iS9" secondAttribute="bottom" constant="8" id="Ccp-M6-wKa"/>
                             <constraint firstAttribute="trailing" secondItem="ame-RJ-Myd" secondAttribute="trailing" constant="20" id="NBf-Aq-JsF"/>
-                            <constraint firstItem="ame-RJ-Myd" firstAttribute="top" secondItem="FoO-eI-87W" secondAttribute="bottom" constant="16" id="S50-AW-j10"/>
                             <constraint firstItem="C53-sZ-5Ka" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" constant="-20" id="XcX-dJ-dQO"/>
                             <constraint firstAttribute="trailing" secondItem="FoO-eI-87W" secondAttribute="trailing" constant="16" id="auL-So-Spr"/>
                             <constraint firstItem="Ibp-tj-iS9" firstAttribute="centerX" secondItem="gZW-fA-gHm" secondAttribute="centerX" id="gLq-Uj-YNA"/>
                             <constraint firstItem="Jtw-c9-Cqg" firstAttribute="centerX" secondItem="Ibp-tj-iS9" secondAttribute="centerX" id="kul-9K-wDm"/>
                             <constraint firstItem="HJ6-f6-vGB" firstAttribute="top" secondItem="C53-sZ-5Ka" secondAttribute="bottom" id="o9d-MZ-tQ5"/>
+                            <constraint firstItem="ame-RJ-Myd" firstAttribute="centerY" secondItem="gZW-fA-gHm" secondAttribute="centerY" multiplier="0.7" id="rhi-uL-V4r"/>
                             <constraint firstItem="C53-sZ-5Ka" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leading" id="sE8-UF-9QV"/>
                             <constraint firstItem="FoO-eI-87W" firstAttribute="top" secondItem="Lb1-jx-JC0" secondAttribute="bottom" id="smN-3S-PL6"/>
+                            <constraint firstItem="Ibp-tj-iS9" firstAttribute="centerY" secondItem="gZW-fA-gHm" secondAttribute="centerY" id="v48-Kn-edR"/>
                             <constraint firstItem="ame-RJ-Myd" firstAttribute="leading" secondItem="gZW-fA-gHm" secondAttribute="leading" constant="20" id="zgp-bA-S1u"/>
                         </constraints>
                     </view>
