--- a/PhotoDrop/Launch.storyboard
+++ b/PhotoDrop/Launch.storyboard
@@ -21,12 +21,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yrZ-qv-7L4">
-                                <rect key="frame" x="67" y="184" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yrZ-qv-7L4">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="6mg-dV-4OC" firstAttribute="top" secondItem="yrZ-qv-7L4" secondAttribute="bottom" id="MhN-eo-zWh"/>
+                            <constraint firstItem="yrZ-qv-7L4" firstAttribute="top" secondItem="4jQ-Bu-ozi" secondAttribute="bottom" id="fPm-NO-ozZ"/>
+                            <constraint firstItem="yrZ-qv-7L4" firstAttribute="leading" secondItem="bRq-pn-DKZ" secondAttribute="leading" id="g2L-Nv-Npq"/>
+                            <constraint firstAttribute="trailing" secondItem="yrZ-qv-7L4" secondAttribute="trailing" id="x8g-TL-ZkY"/>
+                        </constraints>
                     </view>
                     <connections>
                         <segue destination="9Cc-2w-ael" kind="show" identifier="toMapView" id="6aj-Vz-Kin"/>
